--- a/sass/main.css
+++ b/sass/main.css
@@ -19,6 +19,11 @@ a {
   padding: 10px;
 }
 
+.header__logo img {
+  padding-top: 10px;
+  width: 140px;
+}
+
 .header__loc {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -33,11 +38,16 @@ a {
   padding: 20px;
   background: #eaeaea;
   font-weight: 500;
-  -webkit-box-shadow: inset 0px 2px 8px grey;
-          box-shadow: inset 0px 2px 8px grey;
+  -webkit-box-shadow: inset 0px 5px 3px #cfcfcf;
+          box-shadow: inset 0px 5px 3px #cfcfcf;
+}
+
+.header__loc i {
+  padding-left: 40px;
 }
 
 .header__loc input {
+  font-weight: 500;
   border: none;
   background: inherit;
 }
@@ -57,6 +67,7 @@ a {
 
 .header__slogan p {
   padding-bottom: 30px;
+  color: #656565;
 }
 
 .header__slogan--explore {
@@ -91,22 +102,6 @@ a {
           justify-content: flex-start;
 }
 
-.header .nav p {
-  position: absolute;
-  font-size: 12px;
-  border: 2px solid #9356DC;
-  border-radius: 25px;
-  padding: 1px 5px;
-  background: #9356DC;
-  color: #FFF;
-  margin: 0 10px;
-  left: 0;
-}
-
-.header .nav i {
-  padding: 0 15px;
-}
-
 .header .nav__lien {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -126,10 +121,35 @@ a {
   background: #f6f6f6;
 }
 
+.header .nav__lien p {
+  position: absolute;
+  font-size: 12px;
+  border: 2px solid #9356DC;
+  border-radius: 25px;
+  padding: 1px 5px;
+  background: #9356DC;
+  color: #FFF;
+  margin: 0 10px;
+  left: 0;
+}
+
+.header .nav__lien i {
+  color: #888888;
+  padding: 0 15px;
+}
+
+.header .nav__lien a {
+  font-weight: 500;
+}
+
 .header .nav__lien:hover {
   cursor: pointer;
   color: #9356DC;
   background-color: #9356DC25;
+}
+
+.header .nav__lien:hover i {
+  color: #9356DC;
 }
 
 .header .nav__lien:hover a {
@@ -166,10 +186,44 @@ section {
   font-size: 12px;
   font-weight: 500;
   color: #008766;
-  padding: 5px;
+  padding: 5px 8px;
   border-radius: 2px;
   background: #99E2D0;
   right: 12px;
   top: 12px;
+}
+
+.card__text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 10px 20px;
+}
+
+footer {
+  background: #353535;
+  padding: 20px;
+  color: #FFF;
+  font-size: 14px;
+  padding-bottom: 30px;
+}
+
+footer img {
+  width: 90px;
+  margin-bottom: 15px;
+  -webkit-filter: invert(1);
+          filter: invert(1);
+}
+
+.contact p i {
+  width: 20px;
+  font-size: 10px;
+  padding-right: 10px;
 }
 /*# sourceMappingURL=main.css.map */
