--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import "./base/base";
 // layout
 @import "./layout/header";
-@import "./layout/section"
+@import "./layout/section";
+@import "./layout/footer";
 
 
