--- a/sass/layout/_section.scss
+++ b/sass/layout/_section.scss
@@ -33,7 +33,10 @@ section{
         align-items: center;
         justify-content: space-between;
         padding: 10px 20px;
-        
+        & h3{
+            font-size: 18px;
+            font-weight: bold;
+        }
        
     }
 }
