--- a/sass/main.css
+++ b/sass/main.css
@@ -1,5 +1,5 @@
 @import url("https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap");
 * {
   font-family: 'Roboto', sans-serif;
   margin: 0;
@@ -206,7 +206,13 @@ section {
   padding: 10px 20px;
 }
 
+.card__text h3 {
+  font-size: 18px;
+  font-weight: bold;
+}
+
 footer {
+  position: inherit;
   background: #353535;
   padding: 20px;
   color: #FFF;
@@ -225,5 +231,92 @@ footer img {
   width: 20px;
   font-size: 10px;
   padding-right: 10px;
+}
+
+.header-page {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 79px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 10px 25px;
+  text-align: center;
+}
+
+.header-page img {
+  padding-top: 10px;
+  width: 140px;
+}
+
+.section {
+  padding: 0;
+}
+
+.section img {
+  position: absolute;
+}
+
+.section__hors-img {
+  position: relative;
+  bottom: -200px;
+  background: #f6f6f6;
+  padding: 20px;
+  border-radius: 20px 20px 0 0;
+}
+
+.section__titre {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 24px;
+  padding-bottom: 10px;
+}
+
+.section__titre h1 {
+  font-family: 'Shrikhand', cursive;
+  font-size: 26px;
+}
+
+.menu h2 {
+  font-size: 18px;
+  font-weight: 400;
+  text-transform: uppercase;
+  border-bottom: 3px solid #99E2D0;
+  margin-top: 40px;
+  margin-bottom: 20px;
+}
+
+.menu__plat {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  margin-bottom: 10px;
+  padding: 10px;
+  border-radius: 20px;
+  -webkit-box-shadow: 0px 2px 4px grey;
+          box-shadow: 0px 2px 4px grey;
+}
+
+.menu__plat h3 {
+  font-weight: bold;
+}
+
+.footer {
+  position: relative;
+  top: 200px;
 }
 /*# sourceMappingURL=main.css.map */
