--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,13 +2,13 @@
 //mini reset 
 @import url("https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css");
 // google font
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap');
 // base
 @import "./base/base";
 // layout
 @import "./layout/header";
 @import "./layout/section";
 @import "./layout/footer";
+@import "./layout/pages";
 
 
