--- a/sass/layout/_acceuil.scss
+++ b/sass/layout/_acceuil.scss
@@ -1,3 +1,4 @@
+// ----------------------------------------------HEADER---
 .header{
     text-align: center;
     &__logo{
@@ -97,4 +98,66 @@
             }
         }
     }
+}
+// ----------------------------------------SECTION---
+section{
+    background: $fond;
+    padding: 10px;
+    gap: 10px;
+}
+.card{
+    position: relative;
+    background: #FFF;
+    border-radius: 20px;
+    margin: 15px 0;
+    & h2{
+        font-size: 26px;
+    }
+    & img{
+        object-fit: cover;
+        width: 100%;
+        height: 200px;
+        border-radius: 18px 18px 0 0;
+    }
+    &__nouveau{
+        position: absolute;
+        font-size: 12px;
+        font-weight: 500;
+        color: #008766;
+        padding: 5px 8px;
+        border-radius: 2px;
+        background: $tertiaire;
+        right: 12px;
+        top: 12px;
+    }
+    &__text{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 10px 20px;
+        & h3{
+            font-size: 18px;
+            font-weight: bold;
+        }
+        
+    }
+}
+// --------------------------------------------FOOTER---
+footer{
+    
+    background: #353535;
+    padding: 20px;
+    color: #FFF;
+    font-size: 14px;
+    padding-bottom: 30px;
+    & img{
+        width: 90px;
+        margin-bottom: 15px;
+        filter: invert(1);
+    }
+}
+.contact p i{
+        width: 20px;
+        font-size: 10px;
+        padding-right: 10px;
 }
