--- a/sass/layout/_pages.scss
+++ b/sass/layout/_pages.scss
@@ -12,6 +12,9 @@
 .section{
     padding: 0;
     & img{
+        width: 100%;
+        height: 250px;
+        object-fit: cover;
         position: absolute;
     }
     &__hors-img{
@@ -34,15 +37,16 @@
         font-size: 26px;
     }
 }
-.menu {
+.menu{
     & h2{
         font-size: 18px;
         font-weight: 400;
         text-transform: uppercase;
-        // bordure a réduire                                          ???
-        border-bottom: 3px solid $tertiaire;
         margin-top: 40px;
         margin-bottom: 20px;
+        // marge pour reduire la bordure sous le titre
+        margin-right: 290px;
+        border-bottom: 3px solid $tertiaire;
     }
     &__plat{
         display: flex;
@@ -63,6 +67,7 @@
         justify-content: center;
         margin: 30px;
 }
+// permet de retrouver l'espace perdu par la section qui deborde sur l'image
 .footer{
     position: relative;
     top: 200px;
