--- a/sass/main.css
+++ b/sass/main.css
@@ -254,6 +254,10 @@ footer img {
 }
 
 .section img {
+  width: 100%;
+  height: 250px;
+  -o-object-fit: cover;
+     object-fit: cover;
   position: absolute;
 }
 
@@ -288,9 +292,10 @@ footer img {
   font-size: 18px;
   font-weight: 400;
   text-transform: uppercase;
-  border-bottom: 3px solid #99E2D0;
   margin-top: 40px;
   margin-bottom: 20px;
+  margin-right: 290px;
+  border-bottom: 3px solid #99E2D0;
 }
 
 .menu__plat {
