--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,9 +6,7 @@
 // base
 @import "./base/base";
 // layout
-@import "./layout/header";
-@import "./layout/section";
-@import "./layout/footer";
+@import "./layout/acceuil";
 @import "./layout/pages";
 
 
