--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -300,7 +300,12 @@ footer img {
   margin-top: 40px;
   margin-bottom: 20px;
   margin-right: 290px;
-  border-bottom: 3px solid #99E2D0;
+}
+
+.menu h2 span {
+  position: absolute;
+  width: 50px;
+  border-top: 3px solid #FF79DA;
 }
 
 .menu__plat {
@@ -318,10 +323,51 @@ footer img {
   border-radius: 20px;
   -webkit-box-shadow: 0px 2px 4px grey;
           box-shadow: 0px 2px 4px grey;
+  opacity: 0;
+  -webkit-animation: effet-menu .6s ease-out forwards;
+          animation: effet-menu .6s ease-out forwards;
 }
 
 .menu__plat h3 {
   font-weight: bold;
+}
+
+.menu__plat--1 {
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s;
+}
+
+.menu__plat--2 {
+  -webkit-animation-delay: 0.6s;
+          animation-delay: 0.6s;
+}
+
+.menu__plat--3 {
+  -webkit-animation-delay: 0.9s;
+          animation-delay: 0.9s;
+}
+
+.menu__plat--4 {
+  -webkit-animation-delay: 1.2s;
+          animation-delay: 1.2s;
+}
+
+@-webkit-keyframes effet-menu {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes effet-menu {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .commander {
@@ -338,4 +384,3 @@ footer img {
   position: relative;
   top: 200px;
 }
-/*# sourceMappingURL=styles.css.map */
