--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -21,7 +21,14 @@ $fond: #f6f6f6;
     gap: 10px;
     padding: 20px;
 }
-
+@mixin coeur-plein {
+    position: absolute;
+    background: linear-gradient(#FF79DA , #9356DC);
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+    opacity: 0;
+}
 a{
     color: inherit;
     text-decoration: none;
