--- a/sass/layout/_pages.scss
+++ b/sass/layout/_pages.scss
@@ -29,12 +29,6 @@
         & i{
             // Effet non terminer je cherche encore a faire un degrader de couleur progressif      ??????
             cursor: pointer;
-            &:active::before{
-                content: '\f004';
-                font-weight: bold;
-                color: $primaire;
-                transition: all 1s ease-in;
-            }
         }
     }
     &__titre{
@@ -77,7 +71,12 @@
         padding: 10px;
         border-radius: 20px;
         box-shadow: 0px 2px 4px grey;
+        opacity: 0;
+        position: relative;
         &--choix{
+            & h3{
+                font-weight: bold;
+            }
             // Probleme regler, est-ce que le titre doit réagir de la meme manieres ??? largeur 335px et moins impacter ???
             // contraint de répéter le code hidden sur la box et l'élément pour que sa fonctionne
             overflow: hidden;
@@ -87,13 +86,24 @@
                 text-overflow: ellipsis;
             }
         }
-        & h3{
-            font-weight: bold;
+        & i{
+            font-size: 16px;
+            position: absolute;
+            background-color: $tertiaire;
+            // je place l'icone a -65px a droite et je ferai un translateX avec transform origin right de 65px
+            // avec un rotate 
+            // Si je met l'icone a droite de la page ca me creer une marge 
+            // right: -65px;
+            padding: 22px;
+            border-radius: 0 20px 20px 0;
+            top: 50%;
+            transform: translate(0, -50%);
+            // visibility: hidden;
+            // overflow: hidden;
         }
         // Pour l'animation je demarre avec une opacity de 0
         // Je fais aparaitre chaque plat l'un apres l'autre
         // avec ease-out je ralenti la fin de l'animation et je reste sur l'opacity finale avec forwards
-        opacity: 0;
         animation: effet-menu .6s ease-out forwards;
         @for $i from 1 to 5 {
             &--#{$i} {
