--- a/sass/layout/_acceuil.scss
+++ b/sass/layout/_acceuil.scss
@@ -196,6 +196,7 @@ section{
     }
 }
 .card{
+    position: relative;
     background: #FFF;
     border-radius: 20px;
     margin: 15px 0;
@@ -236,6 +237,7 @@ section{
             font-weight: bold;
         }
         &--vide{
+            cursor: pointer;
             // Animation du coeur semble correct mais le hover stope si on bouge legerement la souris
             position: relative;
             &:hover{
