--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -17,13 +17,20 @@ a {
   width: 100%;
   top: 0;
   left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background: linear-gradient(60deg, #FF79DA 30%, #9356DC 70%);
   -webkit-animation: fullscreen 3s;
           animation: fullscreen 3s;
   z-index: 1;
-  text-align: center;
-  line-height: 600px;
-  font-size: 30px;
+  font-size: 40px;
   visibility: hidden;
 }
 
@@ -101,7 +108,6 @@ a {
   0% {
     opacity: 1;
     position: fixed;
-    visibility: visible;
   }
   100% {
     opacity: 0.95;
@@ -114,7 +120,6 @@ a {
   0% {
     opacity: 1;
     position: fixed;
-    visibility: visible;
   }
   100% {
     opacity: 0.95;
@@ -252,11 +257,13 @@ a {
   cursor: pointer;
   -webkit-box-shadow: 2px 2px 4px grey;
           box-shadow: 2px 2px 4px grey;
+  -webkit-transition: all 1s;
+  transition: all 1s;
   -webkit-transform: scale(1.15);
           transform: scale(1.15);
 }
 
-.header .nav {
+.nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -269,7 +276,7 @@ a {
   gap: 20px;
 }
 
-.header .nav h2 {
+.nav h2 {
   margin: 0 -10px;
   font-size: 24px;
   font-weight: bold;
@@ -278,7 +285,7 @@ a {
           justify-content: flex-start;
 }
 
-.header .nav__lien {
+.nav__lien {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -297,7 +304,7 @@ a {
   background: #f6f6f6;
 }
 
-.header .nav__lien p {
+.nav__lien p {
   position: absolute;
   font-size: 12px;
   border: 2px solid #9356DC;
@@ -313,16 +320,16 @@ a {
   transition: transform 500ms ease-in-out, -webkit-transform 500ms ease-in-out;
 }
 
-.header .nav__lien i {
+.nav__lien i {
   color: #888888;
   padding: 0 15px;
 }
 
-.header .nav__lien a {
+.nav__lien a {
   font-weight: 500;
 }
 
-.header .nav__lien:hover {
+.nav__lien:hover {
   cursor: pointer;
   color: #9356DC;
   background-color: #e4d5f6;
@@ -330,16 +337,16 @@ a {
           box-shadow: 2px 2px 5px grey;
 }
 
-.header .nav__lien:hover p {
+.nav__lien:hover p {
   -webkit-transform: scale(1.2) translateX(5px);
           transform: scale(1.2) translateX(5px);
 }
 
-.header .nav__lien:hover i {
+.nav__lien:hover i {
   color: #9356DC;
 }
 
-.header .nav__lien:hover a {
+.nav__lien:hover a {
   color: #000;
 }
 
@@ -603,6 +610,7 @@ footer img {
           box-shadow: 0px 2px 4px grey;
   opacity: 0;
   position: relative;
+  overflow: hidden;
   -webkit-animation: effet-menu .6s ease-out forwards;
           animation: effet-menu .6s ease-out forwards;
 }
@@ -614,6 +622,8 @@ footer img {
 
 .menu__plat--choix h3 {
   font-weight: bold;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .menu__plat--choix p {
@@ -621,15 +631,39 @@ footer img {
   text-overflow: ellipsis;
 }
 
-.menu__plat i {
-  font-size: 16px;
+.menu__plat:hover > .menu__plat--coche {
+  -webkit-animation: translate 600ms linear forwards;
+          animation: translate 600ms linear forwards;
+}
+
+.menu__plat:hover > .menu__plat--coche > .test {
+  -webkit-animation: plat 600ms linear forwards;
+          animation: plat 600ms linear forwards;
+}
+
+.menu__plat:hover > .prix {
+  -webkit-transform: translateX(-50px);
+          transform: translateX(-50px);
+  -webkit-transition: all 600ms linear;
+  transition: all 600ms linear;
+  margin-left: 50px;
+}
+
+.menu__plat--coche {
   position: absolute;
+  top: 0;
+  right: 0;
+  visibility: hidden;
+  overflow: hidden;
   background-color: #99E2D0;
-  padding: 22px;
+  padding: 19.9px;
   border-radius: 0 20px 20px 0;
-  top: 50%;
-  -webkit-transform: translate(0, -50%);
-          transform: translate(0, -50%);
+}
+
+.menu__plat--coche .test {
+  color: white;
+  font-size: 18px;
+  text-align: center;
 }
 
 .menu__plat--1 {
@@ -650,6 +684,56 @@ footer img {
 .menu__plat--4 {
   -webkit-animation-delay: 1.2s;
           animation-delay: 1.2s;
+}
+
+@-webkit-keyframes translate {
+  from {
+    visibility: visible;
+    -webkit-transform: translateX(60px);
+            transform: translateX(60px);
+  }
+  to {
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+    visibility: visible;
+  }
+}
+
+@keyframes translate {
+  from {
+    visibility: visible;
+    -webkit-transform: translateX(60px);
+            transform: translateX(60px);
+  }
+  to {
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+    visibility: visible;
+  }
+}
+
+@-webkit-keyframes plat {
+  from {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  to {
+    visibility: visible;
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes plat {
+  from {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  to {
+    visibility: visible;
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
 }
 
 @-webkit-keyframes effet-menu {
