--- a/sass/layout/_pages.scss
+++ b/sass/layout/_pages.scss
@@ -73,34 +73,53 @@
         box-shadow: 0px 2px 4px grey;
         opacity: 0;
         position: relative;
+        overflow: hidden;
         &--choix{
-            & h3{
-                font-weight: bold;
-            }
-            // Probleme regler, est-ce que le titre doit réagir de la meme manieres ??? largeur 335px et moins impacter ???
-            // contraint de répéter le code hidden sur la box et l'élément pour que sa fonctionne
             overflow: hidden;
             white-space: nowrap;
+            & h3{
+                font-weight: bold;
+                overflow: hidden;
+                text-overflow: ellipsis;
+            }
             & p{
                 overflow: hidden;
                 text-overflow: ellipsis;
             }
         }
-        & i{
-            font-size: 16px;
-            position: absolute;
-            background-color: $tertiaire;
-            // je place l'icone a -65px a droite et je ferai un translateX avec transform origin right de 65px
-            // avec un rotate 
-            // Si je met l'icone a droite de la page ca me creer une marge 
-            // right: -65px;
-            padding: 22px;
-            border-radius: 0 20px 20px 0;
-            top: 50%;
-            transform: translate(0, -50%);
-            // visibility: hidden;
-            // overflow: hidden;
+
+        &:hover{
+
+            & > .menu__plat--coche{
+                
+                animation: translate 600ms linear forwards;
+                & > .test{
+                    animation: plat 600ms linear forwards;
+                }
+            }
+            & > .prix{
+                transform: translateX(-50px);
+                transition: all 600ms linear;
+                // margin left permet de decaler ma marge avec la transition pour reduir le texte
+                margin-left: 50px;
+            } 
         }
+        &--coche{
+            position: absolute;
+            top: 0;
+            right: 0;
+            visibility: hidden;
+            overflow: hidden;
+            background-color: $tertiaire;
+            padding: 19.9px;
+            border-radius: 0 20px 20px 0;
+            // paramètre icone coche 
+            & .test{
+                color: white;
+                font-size: 18px;
+                text-align: center;
+            }
+        }   
         // Pour l'animation je demarre avec une opacity de 0
         // Je fais aparaitre chaque plat l'un apres l'autre
         // avec ease-out je ralenti la fin de l'animation et je reste sur l'opacity finale avec forwards
@@ -110,6 +129,25 @@
                 animation-delay: 0.3s * $i;
             }
         }
+    }
+}
+@keyframes translate {
+    from{
+        visibility: visible;
+        transform: translateX(60px);
+    }
+    to{
+        transform: translateX(0px);
+        visibility: visible;
+    }
+}
+@keyframes plat {
+    from{
+        transform: rotate(0deg);
+    }
+    to{
+    visibility: visible;
+    transform: rotate(360deg);
     }
 }
 @keyframes effet-menu{
