--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -8,5 +8,6 @@
 // layout
 @import "./layout/acceuil";
 @import "./layout/pages";
-
-
+// Media queries
+@import "./layout/tablette_desktop-acceuil";
+@import "./layout/tablette_desktop-menu";
