--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -302,6 +302,7 @@ a {
   gap: 10px;
   padding: 20px;
   background: #f6f6f6;
+  position: relative;
 }
 
 .nav__lien p {
@@ -313,7 +314,7 @@ a {
   background: #9356DC;
   color: #FFF;
   margin: 0 10px;
-  left: 0;
+  left: -20px;
   -webkit-transition: -webkit-transform 500ms ease-in-out;
   transition: -webkit-transform 500ms ease-in-out;
   transition: transform 500ms ease-in-out;
@@ -519,23 +520,24 @@ footer img {
 }
 
 .header-page {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 79px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 10px 25px;
   text-align: center;
 }
 
+.header-page a i {
+  font-size: 18px;
+  float: left;
+  margin-top: 12px;
+  margin-left: 10px;
+}
+
 .header-page img {
+  margin: auto;
   padding-top: 10px;
   width: 140px;
 }
 
 .section {
+  clear: both;
   padding: 0;
 }
 
@@ -553,10 +555,6 @@ footer img {
   background: #f6f6f6;
   padding: 20px;
   border-radius: 20px 20px 0 0;
-}
-
-.section__hors-img i {
-  cursor: pointer;
 }
 
 .section__titre {
@@ -767,4 +765,160 @@ footer img {
 .footer {
   position: relative;
   top: 200px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .section-loader {
+    font-size: 72px;
+  }
+  .alim {
+    font-size: 36px;
+  }
+  .alim--3 {
+    padding-right: 15px;
+  }
+  .header__logo img {
+    width: 250px;
+  }
+  .header__loc i {
+    font-size: 20px;
+  }
+  .header__loc input {
+    padding: 10px;
+  }
+  .nav {
+    margin: 30px 80px;
+  }
+  .nav__lien {
+    margin: 0 50px;
+    padding: 20px 30px;
+  }
+  .nav__lien p {
+    font-size: 16px;
+    padding: 0px 5px;
+  }
+  .nav__lien i {
+    font-size: 22px;
+  }
+  .nav__lien a {
+    font-size: 22px;
+  }
+  section h2 {
+    font-size: 24px;
+    margin: 0 30px;
+  }
+  .card {
+    margin: 20px;
+  }
+  .card__text h3 {
+    font-size: 20px;
+  }
+  .card__text i {
+    font-size: 26px;
+  }
+  footer img {
+    width: 150px;
+    margin: 0 0 30px 40%;
+  }
+  .contact {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    font-size: 18px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .header-page a i {
+    font-size: 22px;
+    margin-top: 20px;
+    margin-left: 15px;
+  }
+  .header-page img {
+    width: 250px;
+  }
+  .section__titre h1 {
+    margin-left: 20px;
+  }
+  .section__hors-img i {
+    font-size: 28px;
+    margin-right: 30px;
+  }
+  .menu {
+    margin: 10px;
+  }
+  .menu--1 {
+    margin-right: 350px;
+  }
+  .menu--2 {
+    margin-right: 240px;
+  }
+  .menu--3 {
+    margin-right: 130px;
+  }
+  .menu__plat {
+    border-radius: 20px 50px 20px 20px;
+    -webkit-animation: test-1 1s ease-in-out forwards;
+            animation: test-1 1s ease-in-out forwards;
+  }
+  .menu__plat--1 {
+    margin-right: -30px;
+    -webkit-animation-delay: 0.3s;
+            animation-delay: 0.3s;
+  }
+  .menu__plat--2 {
+    margin-right: -60px;
+    -webkit-animation-delay: 0.6s;
+            animation-delay: 0.6s;
+  }
+  .menu__plat--3 {
+    margin-right: -90px;
+    -webkit-animation-delay: 0.9s;
+            animation-delay: 0.9s;
+  }
+  .menu__plat--4 {
+    margin-right: -120px;
+    -webkit-animation-delay: 1.2s;
+            animation-delay: 1.2s;
+  }
+}
+
+@-webkit-keyframes test-1 {
+  from {
+    -webkit-transform: translate(-10px);
+            transform: translate(-10px);
+  }
+  50% {
+    opacity: 0.4;
+  }
+  to {
+    -webkit-transform: translate(30px);
+            transform: translate(30px);
+    opacity: 1;
+  }
+}
+
+@keyframes test-1 {
+  from {
+    -webkit-transform: translate(-10px);
+            transform: translate(-10px);
+  }
+  50% {
+    opacity: 0.4;
+  }
+  to {
+    -webkit-transform: translate(30px);
+            transform: translate(30px);
+    opacity: 1;
+  }
 }
