--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -868,8 +868,8 @@ footer img {
   }
   .menu__plat {
     border-radius: 20px 50px 20px 20px;
-    -webkit-animation: test-1 1s ease-in-out forwards;
-            animation: test-1 1s ease-in-out forwards;
+    -webkit-animation: test-1 600ms ease-in-out forwards;
+            animation: test-1 600ms ease-in-out forwards;
   }
   .menu__plat--1 {
     margin-right: -30px;
@@ -890,6 +890,13 @@ footer img {
     margin-right: -120px;
     -webkit-animation-delay: 1.2s;
             animation-delay: 1.2s;
+  }
+  .menu__plat:hover > .prix {
+    -webkit-transform: translateX(-80px);
+            transform: translateX(-80px);
+    -webkit-transition: all 500ms linear;
+    transition: all 500ms linear;
+    margin-left: 100px;
   }
 }
 
