--- a/sass/layout/_tablette_desktop-menu.scss
+++ b/sass/layout/_tablette_desktop-menu.scss
@@ -34,12 +34,17 @@ $marge-menu: 460px;
         }
         &__plat{
             border-radius: 20px 50px 20px 20px;
-            animation: test-1 1s ease-in-out forwards;
+            animation: test-1 600ms ease-in-out forwards;
             @for $i from 1 to 5 {
                 &--#{$i} {
                     margin-right: -30px * $i;
                     animation-delay: 0.3s * $i;
                 }
+            }
+            &:hover > .prix{
+                transform: translateX(-80px);
+                transition: all 500ms linear;
+                margin-left: 100px;
             }
         }
     }
